log
Fri Apr  8 15:02:55 UTC 2022: 
 tests:  0|6
total_score: 0/70
50a4e76
Fri Apr  8 15:14:46 UTC 2022: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:57:19: error: incompatible types when assigning to type ‘HashMap {aka struct HashMap}’ from type ‘void *’
     map[capacity] = NULL;
                   ^
Compilation failed
9c1de1a
Fri Apr  8 15:15:35 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function ‘createMap’:
hashmap.c:57:19: error: incompatible types when assigning to type ‘HashMap {aka struct HashMap}’ from type ‘void *’
     map[capacity] = NULL;
                   ^
Compilation failed
5d5d5d0
Fri Apr  8 15:24:11 UTC 2022: 
 hashmap.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
3133c3d
Fri Apr  8 15:25:07 UTC 2022: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a1403d4
Fri Apr  8 15:32:53 UTC 2022: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
5528128
vi.,  8 de abr. de 2022 16:49:54: 
 tests:  1|5
total_score: 10/70
0e7e464
vi.,  8 de abr. de 2022 16:56:10: 
 hashmap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
932918f
vi.,  8 de abr. de 2022 17:06:59: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
6e77b86
vi.,  8 de abr. de 2022 17:07:49: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
283735b
vi.,  8 de abr. de 2022 17:11:25: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
6767f0d
vi.,  8 de abr. de 2022 17:14:14: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
1ba2564
vi.,  8 de abr. de 2022 17:15:57: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
40a8c5e
vi.,  8 de abr. de 2022 17:17:08: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
aa76bd3
vi.,  8 de abr. de 2022 17:19:04: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  5|4
total_score: 30/70
98b0042
vi.,  8 de abr. de 2022 17:19:23: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e69708b
vi.,  8 de abr. de 2022 17:21:33: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
7a4f217
vi.,  8 de abr. de 2022 17:23:16: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
58e5b08
vi.,  8 de abr. de 2022 17:23:51: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
285db8d
vi.,  8 de abr. de 2022 17:26:18: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
81de346
vi.,  8 de abr. de 2022 17:28:54: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
70fedf4
vi.,  8 de abr. de 2022 17:36:33: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e87068c
vi.,  8 de abr. de 2022 17:37:57: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
380875a
vi.,  8 de abr. de 2022 17:38:34: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b4abffe
vi.,  8 de abr. de 2022 17:41:34: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
02511c2
vi.,  8 de abr. de 2022 17:53:21: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
6f7da7d
